data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2175.wast
;; 5. **Test 5**: Develop a loop where `br_table` indexes into a dynamic list of labels, including some targets that lead back to the start of the loop. Ensure the dynamic nature of the operand is handled correctly.    - **Constraint**: Validates operand dynamicity and correct default label usage.    - **Relation to Infinite Loops**: Incorrect default target handling can cause the loop to run indefinitely.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (loop (result i32)
        (block (result i32)
          (br_table 0 1 (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)